converting image format, removing containers, adding css measurement changes

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,52 +1,36 @@
-.main {
-    display: block;
-    margin: auto;
-}
 .container {
-    display: flex;
     max-width: 70%;
-    max-height: 25%;
     background-color: rgb(11, 97, 167);
     margin: auto;
     color: white;
     border-radius: 10px;
     box-shadow:  0 0 20px rgb(46, 46, 46);
-
 }
+
 .container_image {
     display: flex;
     align-self: flex-start;
-    padding: 1em;
+    padding: 1rem;
+    align-items: center;
 }
 
 .picture {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 12em;
+    height: 216px;
+    width: 198px;
     object-fit: cover;
     box-shadow:  0 0 20px rgb(46, 46, 46);
     border-radius: 10px;
+    margin-right: 2rem;
 }
-.title_container {
-    /* align-self:flex-end; */
-    display: flex;
-    padding-left: 1em;
-    height: auto;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    
-}
+
 h1{
     text-shadow: 0 0 10px rgb(46, 46, 46);
 }
 h2 {
     display: block;
-    /* text-align: center; */
     max-width: 70%;
     margin: auto;
-    padding: 1em;
+    padding: 1rem;
     padding-bottom: 0;
 }
 ol {
@@ -55,8 +39,7 @@ ol {
 .bulletList {
     margin: auto;
     max-width: 70%;
-    /* text-align: center; */
-    padding: 1em;
+    padding: 1rem;
     padding-top: 0;
 }
 footer {
@@ -66,17 +49,15 @@ footer {
     background-color: rgb(11, 97, 167);
     margin: auto;
     color: white;
-    padding: 1em;
-
+    padding: 1rem;
     flex-direction: column;
-    padding-left: 1em;
+    padding-left: 1rem;
     height: auto;
     align-content: center;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     box-shadow:  0 0 20px rgb(46, 46, 46);
-
 }
 .footer2 {
     color: yellow;
