--- a/lesson2/styles/stylesheet.css
+++ b/lesson2/styles/stylesheet.css
@@ -1,13 +1,27 @@
 * {
     box-sizing: border-box;
   }
+
+    /* dry this code out. SIMPLIFY IT */
+  h2 {
+    text-align: center;
+    background-color: rgb(46, 122, 173);
+  }
+
+  img {
+    /* width: 100%;
+    height: 100%; */
+    object-fit: contain;
+    overflow: hidden;
+  }
+
   
   /* Create two equal columns that floats next to each other */
   .column {
     float: left;
-    width: 50%;
+    width: 32.33%; /* this is to split them on the same line*/
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    margin: 5px;
   }
   
   /* Clear floats after the columns */
