--- a/lesson2/styles/stylesheet.css
+++ b/lesson2/styles/stylesheet.css
@@ -1,32 +1,70 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
+.row {
+  display: grid;
+}
+/* dry this code out. SIMPLIFY IT */
+body {
+  max-width: 1024px;
+  margin: auto;
+}
 
-    /* dry this code out. SIMPLIFY IT */
-  h2 {
-    text-align: center;
-    background-color: rgb(46, 122, 173);
-  }
+header, footer {
+  background-color: rgb(46, 122, 173);
+  color: white;
+  text-align: center;
+}
 
-  img {
-    /* width: 100%;
-    height: 100%; */
-    object-fit: contain;
-    overflow: hidden;
-  }
+h3 {
+  text-align: center;
+  background-color: rgb(46, 122, 173);
+  color: white;
+}
 
-  
-  /* Create two equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 32.33%; /* this is to split them on the same line*/
-    padding: 10px;
-    margin: 5px;
+img {
+  object-fit: contain;
+  overflow: hidden;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  padding: 10px;
+  margin: 5px;
+  display: grid;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* small */
+@media screen and (min-width: 37.5em) {
+  .row {
+    grid-template-columns: 1fr;
   }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+}
+
+/* medium */
+@media screen and (min-width: 37.5em) {
+  .row {
+    grid-template-columns: 1fr 1fr;
   }
+  body > div > div:nth-child(3) {
+    grid-column: span 2;
+  }
+}
+
+/* large */
+@media screen and (min-width: 60em) {
+  .row {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  body > div > div:nth-child(3) {
+    grid-column: unset;
+  }
+}
