--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -44,6 +44,13 @@ a:hover {
     background: #0B0322;
     color: #A99AD1;
 }
+.mainHeader {
+
+}
+.headItems {
+    display: flex;
+    align-items: center;
+}
 
 .socialStuff {
     /* justify-content: space-between; */
