--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,13 +1,60 @@
 /* medium - tablet */
 @media screen and (min-width: 769px) {
-    body {
-      max-width: 95%;
-      background-color: darkgreen;
-    }
-    .maincontent {
-      padding: 2rem;
-    }
-    nav {
-      flex-direction: column;  
-    }
+  body {
+    max-width: 95%;
   }
+
+  .maincontent {
+    padding: 2rem;
+  }
+
+  nav {
+    flex-direction: column;
+  }
+
+  main {
+    display: grid;
+    grid-column-gap: 10px;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  .hero {
+    grid-column: 1/4;
+  }
+
+  .news {
+    grid-row-start: 2;
+    grid-column: 1/4;
+  }
+
+  .spotlight {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 140px;
+    grid-row-start: 3;
+    grid-column: 1/4;
+  }
+
+  .join {
+    display: block;
+    grid-row-start: 4;
+    grid-column: 1/4;
+  }
+
+  .event {
+    grid-row-start: 5;
+    grid-column: 1/3;
+  }
+
+  .weather {
+    grid-row-start: 5;
+    grid-column: 3/4;
+  }
+}
