--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Lato&family=Raleway&display=swap');
 
 body {
-  max-width: 95%;
-  margin: auto;
-  padding: 1.5rem;
-  font-family: 'DM Sans', sans-serif;
+    max-width: 95%;
+    margin: auto;
+    padding: 1.5rem;
+    font-family: 'DM Sans', sans-serif;
 }
 
 h1 {
@@ -13,83 +13,146 @@ h1 {
     margin: 0;
     padding: 1.5rem;
 }
-h1, h2{
+
+h1,
+h2 {
     font-family: 'lato', sans-serif;
 }
-.primaryNav{
+.socialStuff {
     display: flex;
-    list-style: none;
+    list-style-type: none;
+
 }
 
-nav {
-  background: #A99AD1;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem;
+#primaryNav {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
 }
+
+.show li {
+    display: flex;
+}
+
+.navbar {
+    background: #A99AD1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+}
+
 .nav-item a {
     display: inline-block;
     text-decoration: none;
 }
 
-nav a {
-  color: rgb(33, 18, 75);
-  display: flex;
-  /* padding-left: 5px;
-  padding-right: 5px; */
-  padding: 15px;
+.nav-item {
+    display: none;
 }
+
+button {
+    background-color: transparent;
+    border: none;
+}
+
+nav a {
+    color: rgb(33, 18, 75);
+    display: flex;
+    padding: 15px;
+}
+
 a:hover {
     background: #0B0322;
     color: #A99AD1;
 }
-.mainHeader {
 
-}
 .headItems {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 0;
 }
 
-.socialStuff {
-    /* justify-content: space-between; */
-    display: flex;
-    list-style-type: none;
-
+.currentDate {
+    padding: 1rem;
 }
-header, footer {
+
+header,
+footer {
     font-family: 'Raleway', sans-serif;
 }
 
 header {
-  background-color: #2a4d6e;
-  color: #94b0cb;
-  text-align: center;
+    padding-top: 0.8rem;
+    background-color: #2a4d6e;
+    color: #94b0cb;
+    text-align: center;
 }
 
+.link {
+    color: #000;
+    text-decoration: underline;
+}
+
+.hero,
+.event,
+.weather,
+.news,
+.join {
+    height: 200px;
+    border: 1px solid black;
+    background-color: #aaa;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.spotlight {
+    height: 280px;
+    border: 1px solid black;
+    background-color: #aaa;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.spot1,
+.spot2,
+.spot3 {
+    height: 100px;
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.spot3 {
+    display: none;
+}
 footer {
+    margin-top: 1rem;
+    padding-top: 0.8rem;
     background-color: #9bdba9;
     color: #002508;
     text-align: center;
-    border: solid 2px;
-    border-color: #5bae6d;
-    padding: 0.5rem;
+}
+.bottomFoot {
+    background-color: darkgray;
 }
 
-/* small - mobile */
-/* @media screen and (min-width: 470px) {
-  nav {
-    flex-direction: column;
-  }
-  nav a {
-    padding: 7px;
-  }
-  body {
-    max-width: 95%;
-  }
-} */
+footer h2 {
+    font-size: 1rem;
+    font-style: italic;
+}
 
+footer img {
+    max-width: 20%;
+    margin-bottom: 0;
+}
 
+footer .logoInfo {
+    font-style: italic;
+}
 
-
+.contactInfo {
+    font-size: .8em;
+}
