--- a/lesson4/styles/stylesheet.css
+++ b/lesson4/styles/stylesheet.css
@@ -43,7 +43,7 @@ button {
 }
 
 #list > li > button:focus {
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 }
 
