adding placeholder text

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -91,6 +91,10 @@ header {
     text-align: center;
 }
 
+.hero {
+    object-fit: contain;
+}
+
 .link {
     color: #000;
     text-decoration: underline;
