--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -35,6 +35,15 @@ h2 {
     display: flex;
 }
 
+#banner {
+    background-color: burlywood;
+}
+#banner h2 {
+    margin: 0;
+    padding: 0.8rem;
+    color: black;
+}
+
 .navbar {
     background: #A99AD1;
     display: flex;
@@ -72,7 +81,8 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0;
+    padding-left: 0;
+    padding-top: .8rem;
 }
 
 .currentDate {
@@ -85,14 +95,10 @@ footer {
 }
 
 header {
-    padding-top: 0.8rem;
+    /* padding: 0.8rem; */
     background-color: #2a4d6e;
     color: #94b0cb;
     text-align: center;
-}
-
-.hero {
-    object-fit: contain;
 }
 
 .link {
@@ -105,11 +111,36 @@ header {
 .weather,
 .news,
 .join {
-    height: 200px;
+    /* height: 200px; */
     border: 1px solid black;
     background-color: #aaa;
     padding: 10px;
     margin-top: 10px;
+    /* margin-bottom: 6px; */
+}
+
+.hero {
+    position: relative;
+    padding: 0;
+}
+
+.hero h2 {
+    padding-left: .5rem;
+    position: absolute;
+    text-shadow: 2px 2px #c2c2c2;
+    font-size: 2.5rem;
+}
+.hero img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+.hero button {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    background-color: rgb(226, 174, 43);
+    border-radius: 4px;
 }
 
 .spotlight {
@@ -120,6 +151,13 @@ header {
     margin-top: 10px;
 }
 
+body > main > section.spotlight > a:nth-child(2) {
+    text-align: center;
+    align-self: center;
+}
+
+
+/* WORK ON THIS AFTER BREAK */
 .spot1,
 .spot2,
 .spot3 {
@@ -141,6 +179,7 @@ footer {
 }
 .bottomFoot {
     background-color: darkgray;
+    padding-bottom: 1rem;
 }
 
 footer h2 {
