--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -28,6 +28,11 @@
   .hero {
     grid-column: 1/4;
   }
+  .hero img {
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
+  }
 
   .news {
     grid-row-start: 2;
