adding js for localstorage, adjusted css

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -49,6 +49,10 @@
     margin-right: auto;
   }
 
+  figure {
+    text-align: center;
+  }
+
   .news {
     grid-row-start: 2;
     grid-column: 1/4;
