adding blur effect on hover and added new class in index

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -41,7 +41,14 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    filter: blur(0em);
+    transition: filter 0.2s;;
   }
+  .discover:hover {
+    filter: blur(0.2em);
+
+  }
+
 
   figure {
     text-align: center;
