--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -47,6 +47,12 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    filter: blur(0em);
+    transition: filter 1s;;
+  }
+  .discover:hover {
+    filter: blur(0.2em);
+
   }
 
   figure {
