--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -174,6 +174,14 @@ body > main > section.spotlight > a:nth-child(2) {
     margin-top: 10px;
 }
 
+.pictures {
+    overflow: hidden;
+}
+
+.pictures figure {
+    margin: auto;
+}
+
 .spot3 {
     display: none;
 }
