--- a/lesson-9/styles/prophets.css
+++ b/lesson-9/styles/prophets.css
@@ -9,6 +9,12 @@ h2 {
 /* BODY */
 main {
     box-shadow: 3px 3px 4px #2f2f2f;
+    background-color: gray;
+    padding: 10px;
+}
+
+body > main > div > section > p:nth-child(3) {
+    padding-bottom: 5px;
 }
 
 h2 {
@@ -40,6 +46,7 @@ img {
 /* FOOTER */
 footer {
     text-align: center;
+    padding: 14px;
 }
 
 @media screen and (min-width: 768px) {
@@ -66,7 +73,7 @@ footer {
 
     h2 {
         font-size: 16px;
-        margin: 0.3em 4em;
+        margin: 0.3em 1em;
         text-shadow: .5px 1px 1px rgb(84, 84, 84);
     }
 
