--- a/chamber/lesson-10/styles/base.css
+++ b/chamber/lesson-10/styles/base.css
@@ -65,6 +65,7 @@ h2 {
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
+    flex-direction: column;
 }
 
 .nav-item a {
