fixed social buttons

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -22,6 +22,10 @@
   .hamburger{
     display: none;
   }
+  
+  .socialStuff{
+    display: unset;
+  }
 
   body>header>nav>ul>button {
     display: none;
