--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -36,6 +36,10 @@ button {
     text-align: center;
     list-style: none;
 }
+.nav-item a {
+    text-decoration: none;
+    color: white;
+}
 .show li {
     padding: 0.5rem;
     display: block;
@@ -48,4 +52,13 @@ body {
     max-width: 100%;
     margin: auto;
 }
+/* - - */
+
+
 /* FOOTER */
+footer{
+    background-color: rgb(0, 74, 0);
+    color: white;
+    text-align: center;
+}
+/* - - */
