--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -1,4 +1,7 @@
 /* HEADER */
+.headImg{
+    display: none;
+}
 h1{
     text-align: center;
     margin: 0;
@@ -12,6 +15,9 @@ h1{
     flex-direction: column;
     list-style: none;
     padding: 0;
+}
+.socialStuff {
+    display: none;
 }
 /* -- */
 
@@ -60,5 +66,14 @@ footer{
     background-color: rgb(0, 74, 0);
     color: white;
     text-align: center;
+}
+.footImg{
+    display: none;
+}
+body > footer > div.logoInfo > p:nth-child(1){
+    margin-top: 0;
+}
+.logoInfo{
+    padding: 1rem;
 }
 /* - - */
