--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -74,8 +74,8 @@ input {
     display: block;
 }
 
-.summaryCalif {
-    text-align: left;
+.summaryCalif .freshAd .weather{
+    text-align: center;
     max-width: 95%;
     margin: auto;
 }
@@ -88,8 +88,11 @@ input {
     height: auto;
     margin: 5px 0px 0px 10px;
 }
+.freshAd > p {
+    font-size: 2rem;
+}
 
-.pic1 > img, .pic2 > img, .pic3 > img{
+.pic1 > img, .pic2 > img, .pic3 > img, .pic4 > img {
     /* overflow: hidden; */
     height: 100%;
     width: 100%;
