--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -69,6 +69,10 @@ body {
     max-width: 100%;
     margin: auto;
 }
+main {
+    max-width: 95%;
+    margin: auto;
+}
 
 input {
     display: block;
@@ -83,10 +87,9 @@ input {
 /* CHANGE THIS MAP IN LARGER SIZES */
 /* width="600" height="450" */
 .sanMap {
-    float: right;
-    width: auto;
+    width: inherit;
     height: auto;
-    margin: 5px 0px 0px 10px;
+    margin: auto;
 }
 .freshAd > p {
     font-size: 2rem;
