--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -33,12 +33,26 @@ h1 {
 }
 
 button {
+    font-size: 2rem;
+    color: white;
     background-color: transparent;
     border: none;
 }
 
-.navbar {
+/* .navbar {
     text-align: center;
+} */
+#primaryNav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
 #primaryNav {
@@ -51,10 +65,20 @@ button {
     list-style: none;
 }
 
-.nav-item a {
+#primaryNav a {
+    /* text-decoration: none; */
+    /* color: white; */
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
+    font-size: 25px;
     color: white;
+    display: block;
+    transition: 0.3s;
 }
+main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
 
 .show li {
     padding: 0.5rem;
