updated header and added nav on other pages and fixed form w3 validation

--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -3,5 +3,13 @@
     body {
         max-width: 75%;
     }
+    .weather {
+        position: relative;
+    }
+    .weather img {
+        position: absolute;
+        top: 70px;
+        right: 100px;
+    }
   
 }
