--- a/bountiful-foods/styles/medium.css
+++ b/bountiful-foods/styles/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 767px) {
 
     .freshAd>button {
         top: 25%;
@@ -9,6 +9,16 @@
         /* margin: 1rem auto 1rem; */
         width: 75%;
         padding: 2rem;
+    }
+
+    .weather {
+        position: relative;
+    }
+
+    .weather img {
+        position: absolute;
+        top: 70px;
+        right: 100px;
     }
 
     .orderSum {
