--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -43,16 +43,25 @@ button {
     text-align: center;
 } */
 #primaryNav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
     left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    background-color: #111;
+    /* Black*/
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 60px;
+    /* Place content 60px from the top */
+    transition: 0.5s;
+    /* 0.5 second transition effect to slide in the sidenav */
 }
 
 #primaryNav {
@@ -75,10 +84,11 @@ button {
     display: block;
     transition: 0.3s;
 }
+
 main {
     transition: margin-left .5s;
     padding: 20px;
-  }
+}
 
 .show li {
     padding: 0.5rem;
@@ -102,6 +112,7 @@ body {
     max-width: 100%;
     margin: auto;
 }
+
 main {
     max-width: 95%;
     margin: auto;
@@ -111,7 +122,7 @@ input {
     display: block;
 }
 
-.summaryCalif .freshAd .weather{
+.summaryCalif .freshAd .weather {
     text-align: center;
     max-width: 95%;
     margin: auto;
@@ -124,10 +135,12 @@ input {
     height: auto;
     margin: auto;
 }
+
 .freshAd {
     position: relative;
 }
-.freshAd > button {
+
+.freshAd>button {
     position: absolute;
     top: 38%;
     left: 50%;
@@ -141,11 +154,15 @@ input {
     cursor: pointer;
     border-radius: 5px;
 }
-.freshAd > p {
+
+.freshAd>p {
     font-size: 2rem;
 }
 
-.pic1 > img, .pic2 > img, .pic3 > img, .pic4 > img {
+.pic1>img,
+.pic2>img,
+.pic3>img,
+.pic4>img {
     /* overflow: hidden; */
     height: 100%;
     width: 100%;
@@ -158,21 +175,53 @@ input {
     border-radius: 10px;
     padding: 1rem;
     box-shadow: 3px 3px 4px #2f2f2f;
-
 }
 
 .weather {
     background-color: lightskyblue;
     margin: 1rem auto 1rem;
-    /* margin-bottom: 10px; */
     border-radius: 10px;
     padding: 1rem;
     box-shadow: 3px 3px 4px #2f2f2f;
 }
 
-.pic4 > img {
+.mainForm {
+    max-width: 95%;
+    margin: auto;
+}
+
+.fruitSelect {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: bisque;
+}
+
+.fruitLab {
+    margin: .5rem;
+}
+
+.textArea {
+    display: inline-grid;
+    width: 100%;
+    height: 100%;
+}
+
+.btn {
+    padding: 1rem;
+    color: white;
+    font-size: 1.5rem;
+    margin: 2rem auto;
+    background-color: rgb(63, 111, 171);
+    border-radius: 7px;
+    border: none;
+}
+
+.pic4>img {
     border-radius: 2.5rem;
 }
+
 /* - - */
 
 
