--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -185,6 +185,13 @@ input {
     box-shadow: 3px 3px 4px #2f2f2f;
 }
 
+.formInput {
+    padding-top: 1rem;
+    width: 95%;
+    height: 100%;
+    margin: auto;
+}
+
 .mainForm {
     max-width: 95%;
     margin: auto;
@@ -194,7 +201,6 @@ input {
     display: inline-block;
     width: 100%;
     height: 100%;
-    text-align: center;
     background-color: bisque;
 }
 
