adding new style to header to fix it

--- a/bountiful-foods/styles/mobile.css
+++ b/bountiful-foods/styles/mobile.css
@@ -3,6 +3,20 @@
     display: none;
 }
 
+.headItems {
+    display: flex;
+    width: 100%;
+}
+
+.headItems h1 {
+    padding: 1rem;
+    width: 100%;
+    text-align: center;
+    margin-right: 1rem;
+    margin: auto;
+    padding-left: 0;
+}
+
 h1 {
     text-align: center;
     margin: 0;
