--- a/bountiful-foods/styles/medium.css
+++ b/bountiful-foods/styles/medium.css
@@ -1,4 +1,7 @@
 @media screen and (min-width: 767px) {
+    body {
+        max-width: 100%;
+    }
 
     .freshAd>button {
         top: 25%;
@@ -32,12 +35,12 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
     }
-
+    .localmap {
+        width: 75%;
+        margin: auto;
+    }
     .sanMap {
         width: 600px; 
         height: 450px;
     }
-
-
-
 }
